# TP-morse

./: .gitignore  Projet Morse.pptx  README.md  morse.c  notes_presentation.md  presentation_finale.pptm  traitement.c  ~$hier_des_charges.doc
PC_morse/: .clang-format  main.c  makefile  uart_msg.c  uart_msg.h
TP 1 - Partie sur PC/: beep_example.c  programme_shell_avec_arguments.c
computer_morse/: .gitignore  CMakeLists.txt  main.c  makefile  uart_msg.c
microcontroller_morse/include/: adc_utils.h  exti_utils.h  gpio_utils.h  morse_utils.h  rcc_utils.h  stm32f10x_register.h  tim_utils.h  uart_frame_utils.h  uart_utils.h
microcontroller_morse/src/: adc_utils.c  exti_utils.c  gpio_utils.c  main.c  morse_utils.c  rcc_utils.c  stm32f10x_register_config.c  tim_utils.c  uart_frame_utils.c  uart_utils.c
microcontroller_platformio/: platformio.ini
microcontroller_platformio/include/: CLK_Timers.h  decoding.h  exti_utils.h  morse_utils.h  stm32f10x_register_config.h  str_to_blink.h  tim_utils.h  uart_utils.h  usart.h
microcontroller_platformio/src/: CLK_Timers.c  decoding.c  main.c  morse_utils.c  str_to_blink.c  tim_utils.c  uart_utils.c  usart.c
partie_traitement_2/include/: CLK_Timers.h  decoding.h  str_to_blink.h
partie_traitement_2/src/: CLK_Timers.c  decoding.c  main.c  str_to_blink.c
poc/: CMakeLists.txt  test_projet.c  test_projet.h
src/: makefile  morse.c  utils.c  utils.h
